--- a/app/pages/purchase/requisition/requisition.html
+++ b/app/pages/purchase/requisition/requisition.html
@@ -103,7 +103,7 @@
       <ion-footer>
         <ion-toolbar>
           <p style="font-size: 9px;">申请人：{{sqr}}</p>
-          <p style="font-size: 9px;">合  计：24567.00元 共 2 件商品</p>
+          <p style="font-size: 9px;">合 计：24567.00元 共 2 件商品</p>
           <ion-buttons end>
             <button primary>
               <ion-icon name="md-checkmark-circle-outline"></ion-icon>
@@ -119,7 +119,8 @@
         <ion-list>
           <ion-item>
             <ion-label primary>申请说明</ion-label>
-            <ion-textarea></ion-textarea></ion-item>
+            <ion-textarea rows="6"></ion-textarea>
+          </ion-item>
         </ion-list>
       </ion-card-content>
       <ion-footer>
@@ -157,13 +158,14 @@
         <ul class="timeline">
           <li>
             <div class="timeline-thumb bg-color-blue timeline-icon">
-              <ion-icon name="ios-timer" ></ion-icon>
+              <ion-icon name="ios-timer"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>Like Title</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, error.....</p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon> 2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
@@ -171,26 +173,28 @@
           <li>
             <!--<img src="http://lorempixel.com/people/400/400/" alt="" class="timeline-thumb">-->
             <div class="timeline-thumb bg-color-blue timeline-icon">
-              <ion-icon name="ios-timer-outline" ></ion-icon>
+              <ion-icon name="ios-timer-outline"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>Updated Profile Picture</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, error.....</p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon> 2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
           </li>
           <li>
             <div class="timeline-thumb bg-color-blue timeline-icon">
-              <ion-icon name="ios-timer-outline" ></ion-icon>
+              <ion-icon name="ios-timer-outline"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>A Wine Glass</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, error.....</p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon> 2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
@@ -200,7 +204,7 @@
         <ul class="timeline">
           <li>
             <div class="timeline-thumb bg-color-red timeline-icon">
-              <ion-icon name="ios-timer" ></ion-icon>
+              <ion-icon name="ios-timer"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>New Message</h4>
@@ -208,7 +212,8 @@
                 consequat.
               </p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon> 2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
@@ -216,7 +221,7 @@
           <li>
             <!--<img src="http://lorempixel.com/people/400/400/" alt="" class="timeline-thumb">-->
             <div class="timeline-thumb bg-color-red timeline-icon">
-              <ion-icon name="ios-timer-outline" ></ion-icon>
+              <ion-icon name="ios-timer-outline"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>Colors</h4>
@@ -232,20 +237,22 @@
                 <ion-icon name="heart" class="color-green"></ion-icon>
               </p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon>2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
           </li>
           <li>
             <div class="timeline-thumb bg-color-red timeline-icon">
-              <ion-icon name="ios-timer-outline" ></ion-icon>
+              <ion-icon name="ios-timer-outline"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>Title</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, error.....</p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon> 2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
@@ -264,13 +271,14 @@
         <ul class="timeline">
           <li>
             <div class="timeline-thumb bg-color-blue timeline-icon">
-              <ion-icon name="ios-timer" ></ion-icon>
+              <ion-icon name="ios-timer"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>Like Title</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, error.....</p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon> 2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
@@ -278,26 +286,28 @@
           <li>
             <!--<img src="http://lorempixel.com/people/400/400/" alt="" class="timeline-thumb">-->
             <div class="timeline-thumb bg-color-blue timeline-icon">
-              <ion-icon name="ios-timer-outline" ></ion-icon>
+              <ion-icon name="ios-timer-outline"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>Updated Profile Picture</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, error.....</p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon> 2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
           </li>
           <li>
             <div class="timeline-thumb bg-color-blue timeline-icon">
-              <ion-icon name="ios-timer-outline" ></ion-icon>
+              <ion-icon name="ios-timer-outline"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>A Wine Glass</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, error.....</p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon> 2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
@@ -307,7 +317,7 @@
         <ul class="timeline">
           <li>
             <div class="timeline-thumb bg-color-red timeline-icon">
-              <ion-icon name="ios-timer" ></ion-icon>
+              <ion-icon name="ios-timer"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>New Message</h4>
@@ -315,7 +325,8 @@
                 consequat.
               </p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon> 2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
@@ -323,7 +334,7 @@
           <li>
             <!--<img src="http://lorempixel.com/people/400/400/" alt="" class="timeline-thumb">-->
             <div class="timeline-thumb bg-color-red timeline-icon">
-              <ion-icon name="ios-timer-outline" ></ion-icon>
+              <ion-icon name="ios-timer-outline"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>Colors</h4>
@@ -339,20 +350,22 @@
                 <ion-icon name="heart" class="color-green"></ion-icon>
               </p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon>2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
           </li>
           <li>
             <div class="timeline-thumb bg-color-red timeline-icon">
-              <ion-icon name="ios-timer-outline" ></ion-icon>
+              <ion-icon name="ios-timer-outline"></ion-icon>
             </div>
             <div class="timeline-item">
               <h4>Title</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, error.....</p>
               <div class="timeline-stats">
-                <ion-icon name="heart"></ion-icon> 2,450
+                <ion-icon name="heart"></ion-icon>
+                2,450
                 <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2 mins ago</span>
               </div>
             </div>
