--- a/app/pages/sales/sorderdetail/sorderdetail.html
+++ b/app/pages/sales/sorderdetail/sorderdetail.html
@@ -4,6 +4,7 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+<!--
 <ion-header>
 
   <ion-navbar primary>
@@ -11,7 +12,6 @@
   </ion-navbar>
 
 </ion-header>
-
 
 <ion-content padding>
   <ion-list>
@@ -41,4 +41,310 @@
       <h5>{{item.remark}}</h5><p>￥{{item.price}} * {{item.num}} = {{item.price * item.num}}</p>
     </ion-item>
   </ion-list>
+</ion-content>
+-->
+<ion-header>
+
+  <ion-navbar primary>
+    <ion-title>订单详情</ion-title>
+  </ion-navbar>
+
+</ion-header>
+
+
+<ion-content padding>
+
+  <ion-toolbar [attr.primary]="isAndroid ? '' : null" no-border-top>
+    <ion-segment [(ngModel)]="pet" [attr.light]="isAndroid ? '' : null">
+
+      <ion-segment-button value="1">
+        订单摘要
+      </ion-segment-button>
+
+      <ion-segment-button value="2">
+        订单商品
+      </ion-segment-button>
+
+      <ion-segment-button value="3">
+        订单状态
+      </ion-segment-button>
+
+      <ion-segment-button value="4">
+        物流信息
+      </ion-segment-button>
+
+    </ion-segment>
+  </ion-toolbar>
+
+  <div [ngSwitch]="pet">
+
+    <ion-card *ngSwitchCase="'1'">
+      <ion-card-content>
+
+        <ion-list>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                订单号：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.dingdanhao}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                客户名称：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.kehu}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                联系人：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.zhiwei + " " + dingdan.lianxiren}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                联系电话：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.lianxidianhua}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                客户名称：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.kehu}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                下单时间：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.xiadantime}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+        </ion-list>
+
+      </ion-card-content>
+      <ion-footer>
+        <ion-toolbar>
+          <p style="font-size: 9px;">申请人：{{sqr}}</p>
+          <p style="font-size: 9px;">合 计：24567.00元 共 2 件商品</p>
+          <ion-buttons end>
+            <button primary>
+              <ion-icon name="md-checkmark-circle-outline"></ion-icon>
+              保存
+            </button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-footer>
+    </ion-card>
+
+    <ion-card *ngSwitchCase="'2'">
+      <ion-card-content>
+        <
+        <ion-list>
+          <ion-item *ngFor="let item of dingdan.shangpinList">
+            <ion-thumbnail item-left>
+              <img src="{{item.imgurl}}">
+            </ion-thumbnail>
+            <p style="font-size: 11px;">{{item.name}}</p>
+            <p style="font-size: 9px;">商品描述占位</p>
+            <p style="font-size: 9px;">￥{{item.price * item.num}}</p>
+          </ion-item>
+        </ion-list>
+      </ion-card-content>
+      <ion-footer>
+        <ion-toolbar></ion-toolbar>
+      </ion-footer>
+    </ion-card>
+
+    <ion-card *ngSwitchCase="'3'">
+      <ion-card-content>
+
+        <ion-refresher on-refresh="doRefresh()" pulling-icon="ion-load-d" spinner="ios-small"></ion-refresher>
+        <div class="divider-title">流程列表</div>
+        <ul class="timeline">
+          <li>
+            <div class="timeline-thumb bg-color-red timeline-icon">
+              <ion-icon name="md-arrow-dropdown-circle"></ion-icon>
+            </div>
+            <div class="timeline-item">
+              <h4 style="font-size: 9px;">客户已收货</h4>
+              <p style="font-size: 9px;">说明占位</p>
+              <div class="timeline-stats" style="font-size: 9px;">
+                <ion-icon name="heart"></ion-icon>
+                签收人：王五
+                <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 签收时间：2016/01/01</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <!--<img src="http://lorempixel.com/people/400/400/" alt="" class="timeline-thumb">-->
+            <div class="timeline-thumb bg-color-blue timeline-icon">
+              <ion-icon secondary name="md-checkbox"></ion-icon>
+            </div>
+            <div class="timeline-item">
+              <h4 style="font-size: 9px;">已发货</h4>
+              <p style="font-size: 9px;">说明占位</p>
+              <div class="timeline-stats" style="font-size: 9px;">
+                <ion-icon name="heart"></ion-icon>
+                发货单号：1234567890
+                <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 发货时间：2016/01/01</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-thumb bg-color-blue timeline-icon">
+              <ion-icon secondary name="md-checkbox"></ion-icon>
+            </div>
+            <div class="timeline-item">
+              <h4 style="font-size: 9px;">已审批</h4>
+              <p style="font-size: 9px;">说明占位</p>
+              <div class="timeline-stats" style="font-size: 9px;">
+                <ion-icon name="heart"></ion-icon>
+                审批人：王五
+                <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 审批时间：2016/01/01</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-thumb bg-color-blue timeline-icon">
+              <ion-icon secondary name="md-checkbox"></ion-icon>
+            </div>
+            <div class="timeline-item">
+              <h4 style="font-size: 9px;">已审批2</h4>
+              <p style="font-size: 9px;">说明占位</p>
+              <div class="timeline-stats" style="font-size: 9px;">
+                <ion-icon name="heart"></ion-icon>
+                审批人：王五
+                <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 审批时间：2016/01/01</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <!--<img src="http://lorempixel.com/people/400/400/" alt="" class="timeline-thumb">-->
+            <div class="timeline-thumb bg-color-blue timeline-icon">
+              <ion-icon secondary name="md-checkbox"></ion-icon>
+            </div>
+            <div class="timeline-item">
+              <h4 style="font-size: 9px;">订单已生成</h4>
+              <p style="font-size: 9px;">说明占位</p>
+              <div class="timeline-stats" style="font-size: 9px;">
+                <ion-icon name="heart"></ion-icon>
+                申请人：王五
+                <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 申请时间：2016/01/01</span>
+              </div>
+            </div>
+          </li>
+        </ul>
+
+
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card *ngSwitchCase="'4'">
+      <ion-card-content>
+
+        <ion-refresher on-refresh="doRefresh()" pulling-icon="ion-load-d" spinner="ios-small"></ion-refresher>
+        <div class="divider-title">流程列表</div>
+        <ul class="timeline">
+          <li>
+            <div class="timeline-thumb bg-color-red timeline-icon">
+              <ion-icon name="md-arrow-dropdown-circle"></ion-icon>
+            </div>
+            <div class="timeline-item">
+              <p style="font-size: 9px;">快件已经到达 鞍山 高新区 何** 正在派件 扫描时间：2016-08-18 12:04:17</p>
+              <div class="timeline-stats" style="font-size: 9px;">
+                <ion-icon name="heart"></ion-icon>
+                签收人：王五
+                <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2016-08-18 12:04:17</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <!--<img src="http://lorempixel.com/people/400/400/" alt="" class="timeline-thumb">-->
+            <div class="timeline-thumb bg-color-blue timeline-icon">
+              <ion-icon secondary name="md-checkbox"></ion-icon>
+            </div>
+            <div class="timeline-item">
+              <p style="font-size: 9px;">快件离开 盘锦中转 已发往 鞍山 扫描时间：2016-08-17 11:22:15</p>
+              <div class="timeline-stats" style="font-size: 9px;">
+                <ion-icon name="heart"></ion-icon>
+                发货单号：1234567890
+                <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2016-08-17 11:22:15</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-thumb bg-color-blue timeline-icon">
+              <ion-icon secondary name="md-checkbox"></ion-icon>
+            </div>
+            <div class="timeline-item">
+              <p style="font-size: 9px;">快件已经到达 盘锦中转 上一站是 杭州中转部，扫描时间：2016-08-17 11:13:24</p>
+              <div class="timeline-stats" style="font-size: 9px;">
+                <ion-icon name="heart"></ion-icon>
+                审批人：王五
+                <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 2016-08-17 11:13:24</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-thumb bg-color-blue timeline-icon">
+              <ion-icon secondary name="md-checkbox"></ion-icon>
+            </div>
+            <div class="timeline-item">
+              <p style="font-size: 9px;">快件离开 杭州留下区 已发往 盘锦中转，扫描时间：2016-08-15 16:10:24</p>
+              <div class="timeline-stats" style="font-size: 9px;">
+                <ion-icon name="heart"></ion-icon>
+                审批人：王五
+                <span class="pos-absolute-right" style="font-size: 9px;"><ion-icon name="time"></ion-icon> 2016-08-15 16:10:24</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <!--<img src="http://lorempixel.com/people/400/400/" alt="" class="timeline-thumb">-->
+            <div class="timeline-thumb bg-color-blue timeline-icon">
+              <ion-icon secondary name="md-checkbox"></ion-icon>
+            </div>
+            <div class="timeline-item">
+              <h4></h4>
+              <p style="font-size: 9px;">订单已生成</p>
+              <div class="timeline-stats">
+                <ion-icon name="heart"></ion-icon>
+                申请人：王五
+                <span class="pos-absolute-right"><ion-icon name="time"></ion-icon> 申请时间：2016/01/01</span>
+              </div>
+            </div>
+          </li>
+        </ul>
+
+      </ion-card-content>
+    </ion-card>
+
+
+  </div>
+
+  <!--<div style="height:5px;width:100%;background-color: #8f8f8f"></div>-->
+
+
 </ion-content>
